layout issues fixed for #3775 (Allow arranging the order of 'tabs' in tabless taxon pages)

--- a/7.x/modules/cdm_dataportal/cdm_dataportal.css
+++ b/7.x/modules/cdm_dataportal/cdm_dataportal.css
@@ -134,6 +134,13 @@ li .taxon {
 }
 
 /*
+ * ======= Taxon Page =======
+ */
+.page-part {
+  clear: both;
+}
+
+/*
  * ======= synonymy =======
  */
 
